--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dreamy-road</title>
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
     <script type="importmap">
@@ -15,6 +15,6 @@
           }
         }
       </script>
-      <script type="module" src="/src/main.js"></script>
+      <script type="module" src="./src/main.js"></script>
 </body>
 </html>
